# SigmaEval

./: LICENSE  PROPOSED_API.md  README.md  pyproject.toml  tox.ini
.cursor/rules/: apache-license.md  project-structure.md  python-style.md  testing.md
docs/: SECURITY.md  getting_started.ipynb
sigmaeval/: __init__.py  _evaluators.py  assertions.py  core.py  evaluators.py  metrics.py
sigmaeval/core/: __init__.py  data_collection.py  exceptions.py  framework.py  llm_client.py  models.py  prompts.py  rubric_generator.py  utils.py  writing_styles.py
tests/: README.md  __init__.py  example_multi_turn_chat_app.py  test_app_handler.py  test_assertions.py  test_basic.py  test_data_collection.py  test_evaluators.py  test_framework.py  test_framework_integration.py  test_framework_unit.py  test_metrics.py  test_models.py  test_retries.py  test_utils.py  test_warnings.py  test_writing_styles.py
tests/example_apps/: __init__.py  simple_chat_app.py
